--- a/app/src/main/res/layout/include_main_card.xml
+++ b/app/src/main/res/layout/include_main_card.xml
@@ -22,7 +22,7 @@
                 android:layout_centerInParent="true"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                card:card_name="内存加速"
+                card:card_name="进程管理"
                 card:card_image="@mipmap/icon01" />
 
 
